[package]
name = "sparkle-impostor"
version = "0.15.0"
edition = "2021"
authors = ["Lara Kayaalp <me@laralove.gay>"]
description = "A third party crate for Twilight to execute Discord webhooks that clone an existing message"
repository = "https://github.com/laralove143/sparkle-impostor"
license = "ISC"
keywords = ["discord", "discord-api", "twilight"]
categories = ["api-bindings", "asynchronous"]

[features]
upload = ["reqwest"]

[dev-dependencies]
tokio = { version = "1.28", features = ["macros"] }
anyhow = { version = "1.0", features = ["backtrace"] }
dotenvy = "0.15"

[dependencies]
twilight-http = "0.15"
twilight-model = "0.15"
twilight-validate = "0.15"
twilight-util = { version = "0.15", features = ["snowflake"] }
serde = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", optional = true }
